@@ -1,5 +1,6 @@
 2007-03-31  Brian Bidulock  <bidulock@openss7.org>
 
+	* src/modules/sth.c: get getown setown proper for struct pid
 	* src/kernel/strsched.c: only prlock midstream on SMP
 	* src/kernel/strutil.c: only prlock midstream on SMP
 
